--- a/mobile/src/main/res/layout/activity_main_activity_phone.xml
+++ b/mobile/src/main/res/layout/activity_main_activity_phone.xml
@@ -6,6 +6,16 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityPhone">
 
     <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:id="@+id/textView" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Noitfy"
+        android:id="@+id/btnNotify"
+        android:layout_below="@+id/textView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="82dp" />
 
 </RelativeLayout>
