--- a/wear/src/main/res/layout/round_activity_main_activity_wear.xml
+++ b/wear/src/main/res/layout/round_activity_main_activity_wear.xml
@@ -5,6 +5,19 @@
     tools:deviceIds="wear_round">
 
     <TextView android:id="@+id/text" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true" android:text="@string/hello_round" />
+        android:layout_height="wrap_content"
+        android:text="@string/hello_round"
+        android:layout_marginTop="52dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Record"
+        android:id="@+id/btnRecord"
+        android:layout_below="@+id/text"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="36dp" />
+
 </RelativeLayout>
